--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
   "cSpell.words": [
+    "Accessscreen",
     "autovalidate",
+    "buildpasswoerd",
     "Chaminade",
     "dateof",
     "deposiit",
@@ -17,11 +19,16 @@
     "ifphone",
     "ifstate",
     "lastname",
+    "LTRB",
     "mobilescreen",
+    "passwordreset",
+    "pssword",
     "Registeration",
+    "scorllcontroller",
     "scrollcontroller",
     "tabbars",
     "tabletscreen",
+    "Vissible",
     "yello"
   ]
 }
