--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,18 @@
 {
   "cSpell.words": [
-    "Accessscreen",
+    "AccessScreen",
+    "Ansul",
+    "autocorrect",
     "autovalidate",
+    "buildemail",
     "buildpasswoerd",
     "Chaminade",
+    "citycheckbox",
     "dateof",
     "deposiit",
+    "dobcheckbox",
     "Downvalue",
+    "emailcheckbox",
     "Fand",
     "fandq",
     "firstname",
@@ -19,10 +25,15 @@
     "ifphone",
     "ifstate",
     "lastname",
+    "Listview",
+    "lnamecheckbox",
     "LTRB",
     "mobilescreen",
+    "passwordcheckbox",
     "passwordreset",
+    "phonenumbercheckbox",
     "pssword",
+    "regioncheckbox",
     "Registeration",
     "scorllcontroller",
     "scrollcontroller",
